@@ -1,3 +1,8 @@
+2012-01-22  Valek Filippov <frob@df.ru>
+
+	* Comments improvements
+	* Fix status page problem
+
 2012-01-20  Valek Filippov <frob@df.ru>
 
 	* Comments fixes and improvements
